# prompt-lineage

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: README.md  prompts.yml
examples/.github/workflows/: lineage.yml
examples/evals/: extract_invoice.yml  support_triage.yml
examples/prompts/: extract_invoice.md  support_triage.md
examples/src/: handlers.py
src/prompt_lineage/: __init__.py  cli.py  diff.py  github_action.py  graph.py  model.py  scanner.py
src/prompt_lineage/integrations/: __init__.py  dbt_eval.py  prompt_contracts.py  prompt_freshness.py
src/prompt_lineage/render/: __init__.py  html.py  json.py
src/prompt_lineage/render/static/: style.css
src/prompt_lineage/render/templates/: _base.html.j2  index.html.j2  prompt.html.j2
tests/: conftest.py  test_dbt_eval_integration.py  test_diff.py  test_e2e_example.py  test_model.py  test_prompt_contracts_integration.py  test_prompt_freshness_integration.py  test_render_html.py  test_render_json.py  test_scanner.py
